--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 		<hola-mundo quien="Armando"></hola-mundo>
 		<my-counter></my-counter>
 
-		<script src="./src/index.js" type="module"></script>
+		<script src="./dist/main.js"></script>
 	</body>
 </html>
