Creando feedback-componente

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<hola-mundo quien="Armando"></hola-mundo>
 		<my-counter></my-counter>
 
-		<script src="./dist/main.js"></script>
+		<feedback-element msg="Hola" opened></feedback-element>
+
+		<script src="./src/index.js" type="module"></script>
 	</body>
 </html>
