Empezando con post

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 	<body>
 		<h1>Lit-element</h1>
 
-		<hola-mundo quien="Armando"></hola-mundo>
-		<my-counter></my-counter>
-
-		<feedback-element msg="Hola" opened></feedback-element>
-
+		<my-rickandmorty></my-rickandmorty>
 		<script src="./src/index.js" type="module"></script>
 	</body>
 </html>
