--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<h1>Lit-element</h1>
 
 		<my-rickandmorty></my-rickandmorty>
+		<!-- <script src="./dist/main.js"></script> -->
 		<script src="./src/index.js" type="module"></script>
 	</body>
 </html>
