--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 	</head>
 	<body>
 		<h1>Lit-element</h1>
-
-		<my-rickandmorty></my-rickandmorty>
-		<!-- <script src="./dist/main.js"></script> -->
+		<my-postapi></my-postapi>
 		<script src="./src/index.js" type="module"></script>
 	</body>
 </html>
