Actualizando get y post en nueva Api

--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Bienvenidos a Lit-element</title>
+		<link rel="stylesheet" href="./src/styles/style.css" />
 	</head>
 	<body>
 		<h1>Lit-element</h1>
-		<my-postapi></my-postapi>
+		<div class="Container">
+			<div>
+				<my-rickandmorty></my-rickandmorty>
+			</div>
+			<div>
+				<my-postapi></my-postapi>
+			</div>
+		</div>
 		<script src="./src/index.js" type="module"></script>
 	</body>
 </html>
