--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<my-postapi></my-postapi>
 			</div>
 		</div>
+		<my-element></my-element>
 		<script src="./src/index.js" type="module"></script>
 	</body>
 </html>
